--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
     "eslint-plugin-import": "^2.12.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.9.1"
+  },
+  "dependencies": {
+    "lodash.isequal": "^4.5.0"
   }
 }
