--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,7 +1,8 @@
 {
   "extends": "airbnb",
   "rules": {
-    "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
+    "react/jsx-filename-extension": ["error", { "extensions": [".js", ".jsx"] }],
+    "react/prefer-stateless-function": ["warn", {"ignorePureComponents": true}],
     "linebreak-style": ["warn", "windows"],
     "prefer-template": "warn",
     "no-mixed-operators": "off",
