--- a/package.json
+++ b/package.json
@@ -46,6 +46,9 @@
     "prop-types": "^15.6.2",
     "react": "^16.4.1",
     "react-custom-scrollbars": "^4.2.1",
-    "react-dom": "^16.4.1"
+    "react-dom": "^16.4.1",
+    "react-redux": "^5.0.7",
+    "redux": "^4.0.0",
+    "redux-logger": "^3.0.6"
   }
 }
