--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "file-loader": "^1.1.11",
     "html-webpack-plugin": "^3.2.0",
     "style-loader": "^0.21.0",
+    "uglifyjs-webpack-plugin": "^2.2.0",
     "webpack": "^4.15.1",
     "webpack-cli": "^3.0.8",
     "webpack-dev-server": "^3.1.4",
